--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
 {% load staticfiles %}
-{% load unit_price %}
+{% load unit_price total_price %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -128,8 +128,10 @@
                         <ul>
                             {% for item in request.user.member.cart.items.all %}
                                 <li><a class="dropdown-item" href="{{ item.book.get_absolute_url }}">{{ item }} by {{ item.book.author }} ({{ item.count }}) - ${% unit_price item.price item.count %}</a></li>
+                                <div class="dropdown-divider"></div>
                             {% endfor %}
-                            <a class="dropdown-item" href="{% url "cart:cart" %}"><button>Go to Cart</button></a>
+                            <li><p class="dropdown-item">Total: ${% total_price request.user.member.cart.items.all %}</p></li>
+                            <a class="dropdown-item" href="{% url "cart:cart" %}"><button class="btn btn-sm btn-dark">Go to Cart</button></a>
                         </ul>
                     {% else %}
                         <a class="dropdown-item" href="{% url "members:login" %}">Please log in to use Cart</a>
@@ -148,11 +150,9 @@
                     <i class="nav-item fas fa-user fa-lg"></i>
                 </a>
 
-                {% if requests.user.is_authenticated %}
+                {% if request.user.is_authenticated %}
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="mem">
-                        <a class="dropdown-item" href="#">Profile</a> {# TODO #}
-                        <a class="dropdown-item" href="#">Purchases</a>
-                        <a class="dropdown-item" href="#">Settings</a>
+                        <a class="dropdown-item" href="{% url "members:default_account" %}">Profile</a> {# TODO #}
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="{% url 'members:logout' %}">Log out</a>
                     </div>
