--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -20,6 +20,16 @@
 
 {% block main_content %}
 
+    {% if messages %}
+        <div class='messages'>
+            <ul class="messages">
+                {% for message in messages %}
+                    <li {% if message.tags %} class="{{message.tags}}" {% endif %}> {{ message }} </li>
+                {% endfor %}
+            </ul>
+        </div>
+    {% endif %}
+
     <!-- send user instance as object, populate the page with it -->
     <div class="container-fluid">
         <div class="row">
@@ -38,182 +48,45 @@
         <div class="row">
             <table class="table table-light table-bordered">
                 <thead class="thead-dark">
-                <tr>
-                    <th>Item</th>
-                    <th>Per Book Price</th>
-                    <th>Quantity</th>
-                    <th>Amount</th>
-                    <th></th>
-                </tr>
+                    <tr>
+                        <th>Item</th>
+                        <th>Per Book Price</th>
+                        <th>Quantity</th>
+                        <th>Amount</th>
+                    </tr>
                 </thead>
+
                 <tbody>
-                <tr>
-                    <th scope="row">Green Eggs and Ham</th>
-                    <th>$12.21</th>
-                    <th>137</th>
-                    <th id="amount 1">$1534.97</th>
-                    <th><i class="fas fa-minus-circle"></i></th>
-                </tr>
-                <tr>
-                    <th scope="row">A Day in the Life of Marlon Bundo</th>
-                    <th>$16.08</th>
-                    <th>2</th>
-                    <th id="amount 2">$32.16</th>
-                    <th><i class="fas fa-minus-circle"></i></th>
-                </tr>
-                <tr>
-                    <th scope="row">Lords of Discipline</th>
-                    <th>$17.99</th>
-                    <th>1</th>
-                    <th id="amount 3">$17.99</th>
-                    <th><i class="fas fa-minus-circle"></i></th>
-                </tr>
-                <tr>
-                    <th scope="row">Freakonomics</th>
-                    <th>$10.99</th>
-                    <th>1</th>
-                    <th id="amount 4">$10.99</th>
-                    <th><i class="fas fa-minus-circle"></i></th>
-                </tr>
-                <tr>
-                    <th scope="row"></th>
-                    <th>. . .</th>
-                    <th>. . .</th>
-                    <th></th>
-                </tr>
-                <tr>
-                    <th scope="row"></th>
-                    <th>Sub-Total:</th>
-                    <th id="sub-total">$ XXXX.XX</th>
-                    <th><!-- total up the amount for each item and here --></th>
-                </tr>
-                <tr>
-                    <th scope="row"></th>
-                    <th>Shipping and Tax:</th>
-                    <th id="tax-total">$ XX.XX</th>
-                    <th><!-- total up the amount for all items shipping and tax here --></th>
-                </tr>
-                <tr>
-                    <th scope="row"></th>
-                    <th>Total:</th>
-                    <th id="total">$ XXXX.XX</th>
-                    <th><!-- total up the amount for everything here --></th>
-                </tr>
+                    {% for item in cart %}
+                        <tr>
+                            <th scope="row">{{ item.book.name }}</th>
+                            <th>${{ item.price }}</th>
+                            <th>{{ item.count }}</th>
+                            <th id="amount 1">${% unit_price item.price item.count %}</th>
+                        </tr>
+                    {% endfor %}
                 <tbody>
             </table>
         </div>
         <div class="row">
-            <table class="table table-light table-bordered">
-                <thead class="thead-dark">
-                <tr>
-                    <th>Address</th>
-                    <th></th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <th>{ 123 Address }</th>
-                    <th><i class="fas fa-eraser"></i></th>
-                </tr>
-                </tbody>
-            </table>
+            <form id="checkout" method="post" action="submit/"> {% csrf_token %}
+                <h3>Shipping Address:</h3>
+                <input type="text" name="new_address" placeholder="New Address">
+                Save: <input type="checkbox" name="save_address"> <br>
+
+                <fieldset class="spaced">
+                    <legend>Saved Addresses:</legend>
+                    {% for address in request.user.member.saved_addresses.all %}
+                        <input type="radio" name="{{ address.location }}">{{ address.location }}<br>
+                    {% endfor %}
+                </fieldset>
+                <br>
+                <div id="payment-form"></div>
+                <input id="checkout_btn" class="btn btn-sm btn-dark" type="submit" value="Submit Order">
+            </form>
         </div>
-        <div class="row">
-            <div class="offset-4 col-md-8">
-                <button id="checkout_btn" class="btn btn-sm btn-dark">Place Order</button>
-                <button id="empty_btn" class="btn btn-sm btn-dark">Empty Cart</button>
-            </div>
-        </div>
+    <br>
+    <a href="{% url 'cart:cart' %}"><button id="edit" class="btn-sm btn-dark">Return to Cart</button></a>
     </div>
-
-    <div id="myPopup" class="popup">
-        <div class="popup-content">
-            <div class="container form-group">
-                <div class="row">
-                    <div class="col-12">
-                        <h4>How many copies of {book} would you like to remove from your cart?</h4>
-                        <form>
-                            <select name="copies" class="form-control-sm">
-                                <option> 1</option>
-                                <!-- append to the max qty here -->
-                            </select>
-                            <button class="btn-sm btn-light"> Remove</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div id="myPopup2" class="popup">
-        <div class="popup-content">
-            <div class="container form-group">
-                <div class="row">
-                    <div class="col-12">
-                        <h4>What would you like your new shipping address to be?</h4>
-                        <form>
-                            <input name="address" id="change_addr" type="text"></input>
-                            <br><br>
-                            <input class="btn" type="submit" value="Submit"></input>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div id="myPopup3" class="popup">
-        <div class="popup-content">
-            <div class="container form-group">
-                <div class="row">
-                    <div class="col-12">
-                        <h4>Are you sure you wish to empty your cart?</h4>
-                        <br>
-                        <form>
-                            <button class="btn btn-sm" id="empty">Yes</button>
-                            <button class="btn btn-sm" id="keep">No</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div id="myPopup4" class="popup">
-        <div class="popup-content">
-            <div class="container form-group">
-                <div class="row">
-                    <div class="col-12">
-                        <h4>What will be your payment method?</h4>
-                        <br>
-                        <form>
-                            <input type="radio" name="payment" value="Credit Card">Credit Card</input><br>
-                            <input type="radio" name="payment" value="Cash">Cash</input><br>
-                            <input type="radio" name="payment" value="Paypal">Paypal</input><br>
-                            <input type="radio" name="payment" value="Check">Check</input><br>
-                            <button class="btn-sm btn-light">Pay</button>
-                        </form>
-
-                        <form class="credit">
-                            Credit Card Number: <input type="text" name="number"></input><br>
-                            Expiration: <input type="text" name="number"></input><br>
-                            CVN: <input type="text" name="number"></input>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <ul>
-        {% for item in cart %}
-            <li>{{ item.book }}, ${% unit_price item.count item.price %}, Count: {{ item.count }}</li>
-        {% endfor %}
-        <li>Total: ${% total_price cart %}</li>
-    </ul>
-
-    <form id="checkout" method="post" action="submit/"> {% csrf_token %}
-        <div id="payment-form"></div>
-        <input type="submit" value="Submit Order">
-    </form>
 
 {% endblock main_content %}
